syntax = "proto3";

option csharp_namespace = "AuthenticationService";

service GrpcAuthenticationService{
    rpc LoginUser(LoginUserRequest) returns(LoggedUserResponse);
}

message LoginUserRequest{
    string email = 1;
    string password = 2;
}

message LoggedUserResponse{
    string first_name = 1;
    string last_name = 2;
    string email = 3;
    repeated string roles = 4;
    string access_token = 5;
}